# Claude-Assistant-Platform

./: .env.example  .gitattributes  .gitignore  .mcp.json.example  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Jenkinsfile  README.md  REQUIREMENTS.md  TELEGRAM_PLAN.md  docker-compose.yml  sample.env
.claude/: settings.local.json
.claude/agents/: mcp-debugger.md  pr-manager.md  test-runner.md
.claude/documentation/: jenkins-mcp-cc-setup.md
.claude/rules/: README.md  documentation.md  project-overview.md  security.md
.claude/rules/backend/: agents.md  database.md  fastapi.md  orchestrator.md  pydantic-models.md  python.md
.claude/rules/frontend/: nextjs.md  react-components.md  ui-ux-guidelines.md
.claude/rules/infrastructure/: docker.md  jenkins.md  orange-pi.md
.claude/rules/mcp-servers/: fastmcp.md
.claude/skills/add-tool/: SKILL.md
.claude/skills/check-deployment/: SKILL.md
.claude/skills/deploy/: HEALTH-CHECKS.md  ROLLBACK.md  SKILL.md
.claude/skills/deployment-sync/: SKILL.md
.claude/skills/frontend-dev/: SKILL.md  TEMPLATES.md
.claude/skills/local-dev/: ENV-LOCAL.md  SKILL.md
.claude/skills/new-agent/: SKILL.md  TEMPLATE.md
.claude/skills/new-mcp/: DEPLOYMENT-CHECKLIST.md  SKILL.md  STRUCTURE.md
Backend/: Dockerfile  Makefile  README.md  pyproject.toml  run.py
Backend/database/migrations/: 001_create_chats_tables.sql  002_create_telegram_sessions.sql  003_create_todos_table.sql  004_create_agent_executions_table.sql  005_create_routing_tables.sql  006_create_resume_tables.sql
Backend/src/: __init__.py
Backend/src/agents/: __init__.py  base.py  github_agent.py  gmail_agent.py  google_calendar_agent.py  motion_agent.py  orchestrator.py  resume_agent.py  router.py  todo_agent.py
Backend/src/agents/tools/: __init__.py  todo_tools.py
Backend/src/api/: __init__.py  main.py
Backend/src/api/routes/: __init__.py  chat.py  health.py  resume.py  router.py  todos.py
Backend/src/config/: __init__.py  settings.py
Backend/src/database/: __init__.py  connection.py  manager.py  models.py  routing_models.py
Backend/src/models/: __init__.py  chat.py  resume.py  todo.py
Backend/src/services/: __init__.py  agent_execution_service.py  cache_service.py  chat_service.py  embedding_service.py  router_service.py  telegram_session_service.py  todo_executor.py  todo_service.py
Backend/src/services/resume/: __init__.py  certification_service.py  education_service.py  generated_resume_service.py  job_listing_service.py  profile_service.py  skill_service.py  work_experience_service.py
Backend/src/services/scraper/: __init__.py  parsers.py  service.py
Backend/src/services/telegram/: __init__.py  message_handler.py  models.py  poller.py
Backend/tests/: __init__.py
DOCUMENTATION/: DEPLOYMENT.md  EXECUTION_PLAN.md  FEATURE_ROADMAP.md  TODO_Implementation.md  apple-watch-shortcut.md
Frontend/: Dockerfile  README.md  makefile  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.tsbuildinfo
Frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
Frontend/src/app/resume/: page.tsx
Frontend/src/app/resume/experience/: page.tsx
Frontend/src/app/resume/history/: page.tsx
Frontend/src/app/resume/jobs/: page.tsx
Frontend/src/app/resume/profile/: page.tsx
Frontend/src/app/resume/skills/: page.tsx
Frontend/src/app/todos/: page.tsx
Frontend/src/components/: ChatContainer.tsx  ChatInput.tsx  ChatLayout.tsx  ChatMessage.tsx  ConfirmModal.tsx  MarkdownContent.tsx  SessionItem.tsx  SessionSidebar.tsx  TodoFilters.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx  TodoStats.tsx  index.ts
Frontend/src/components/resume/: ExperienceList.tsx  JobListingCard.tsx  ProfileForm.tsx  ResumeCard.tsx  SkillList.tsx  index.ts
Frontend/src/stores/: chatStore.ts  profileStore.ts  resumeStore.ts  todoStore.ts
MCPS/Telegram/: Dockerfile  Makefile  README.md  pyproject.toml
MCPS/Telegram/src/: server.py
MCPS/github/: .env.example  Dockerfile  GITHUB-MCP-PLAN.md  Makefile  README.md  pyproject.toml
MCPS/github/src/: __init__.py  client.py  server.py
MCPS/github/src/models/: __init__.py  branches.py  common.py  issues.py  pull_requests.py
MCPS/github/tests/: __init__.py
MCPS/gmail/: Dockerfile  Makefile  README.md  gmail-mcp.md  pyproject.toml
MCPS/gmail/src/: __init__.py  auth.py  client.py  models.py  server.py  utils.py
MCPS/google-calendar/: Dockerfile  Makefile  README.md  google-calendar.md  pyproject.toml
MCPS/google-calendar/src/: __init__.py  auth.py  client.py  models.py  server.py  utils.py
MCPS/google-drive/: Dockerfile  Makefile  README.md  pyproject.toml
MCPS/google-drive/src/: __init__.py  auth.py  client.py  models.py  server.py
MCPS/motion/: .env.example  Dockerfile  MOTION_MCP_PLAN.md  Makefile  README.md  pyproject.toml
MCPS/motion/src/: __init__.py  client.py  rate_limiter.py  server.py
MCPS/motion/src/models/: __init__.py  common.py  projects.py  tasks.py  users.py  workspaces.py
MCPS/motion/tests/: __init__.py  test_rate_limiter.py
MCPS/obsidian/: Dockerfile  Makefile  README.md  pyproject.toml
MCPS/obsidian/src/: __init__.py  server.py
docker/telegram-mcp/: Dockerfile  Makefile  README.md  pyproject.toml
docker/telegram-mcp/src/: __init__.py  server.py
