# =============================================================================
# Claude Assistant Platform - Backend
# =============================================================================

[project]
name = "claude-assistant-backend"
version = "0.1.0"
description = "Self-hosted AI assistant platform using Claude Agents SDK"
readme = "README.md"
requires-python = ">=3.12"

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Claude Agents SDK
    "anthropic>=0.40.0",

    # Configuration & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # Database (psycopg3 for async PostgreSQL)
    "sqlalchemy>=2.0.36",
    "psycopg[binary,pool]>=3.2.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Caching (Redis)
    "redis[hiredis]>=5.2.0",

    # HTTP Client
    "httpx>=0.28.0",

    # Routing (Phase 2: BM25 + Embeddings)
    "rank-bm25>=0.2.2",
    "openai>=1.58.0",
    "numpy>=2.2.0",

    # Utilities
    "python-dateutil>=2.9.0",
]

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

# -----------------------------------------------------------------------------
# Tool Configuration
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
